--- a/internshalaapi/.env
+++ b/internshalaapi/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-MONGODB_URL = mongodb://0.0.0.0/internshalafinal
+MONGODB_URL = mongodb+srv://pummysahu04:3S5RW67eoYYqjqOO@cluster0.tmdfq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EXPRESS_SESSION_SECRET = "EXPRESS_SESSION_SECRET"
 JWT_SECRET = "JWT_SECRET"
 JWT_EXPIRE = "1h"
